syntax = "proto3";

package spec;

import "google/api/annotations.proto";

message WeatherStoreKey {
        fixed32 timestamp = 1;
        float lat = 23;
        float lng = 24;
}

message WeatherStoreValue {
        fixed32 from = 1;
        fixed32 to = 2;
        float altitude = 5;
        float fogPercent = 6;
        float pressureHPA = 7;
        float cloudinessPercent = 8;
        float windDirectionDeg = 9;
        float dewpointTemperatureC = 10;
        float windGustMps = 11;
        float humidityPercent = 12;
        float areaMaxWindSpeedMps = 13;
        float windSpeedMps = 14;
        float temperatureC = 15;
        float lowCloudsPercent = 16;
        float mediumCloudsPercent = 17;
        float highCloudsPercent = 18;
        float temperatureProbability = 19;
        float windProbability = 20;
        fixed32 updatedTimestamp = 22;
        float lat = 23;
        float lng = 24;
}

message QueryRequest {
        repeated WeatherStoreKey locations = 1;
}


message WeatherResponseItem {
        WeatherStoreKey location = 1;
        WeatherStoreValue weather = 2;
}
message QueryResponse {
        repeated WeatherResponseItem locations = 2;
        string license = 1;
}

message ExtremeResponse {
        WeatherStoreValue coldest = 1;
        WeatherStoreValue hottest = 2;
}

message Empty {
}

message BatchRequest {
        fixed32 timestamp = 1;
}

service Weather {
        rpc RpcQuery (QueryRequest) returns (QueryResponse) {
           option (google.api.http) = {
             post: "/v1/query"
             body: "*"
           };
        }

        rpc RpcExtreme (Empty) returns (ExtremeResponse) {
           option (google.api.http) = {
             post: "/v1/extreme"
             body: "*"
           };
        }

        rpc RpcBatch (BatchRequest) returns (stream WeatherStoreValue) {
           option (google.api.http) = {
             post: "/v1/batch"
             body: "*"
           };
        }
}
